# election_data_analysis

./: Cargo.toml  README.md
assembly_code/party-wise-percentage-votes/: Cargo.toml
assembly_code/party-wise-votes/: Cargo.toml
assembly_code/vote-splitting-assembly/: Cargo.toml
assembly_code/winning-candidate/: Cargo.toml
country-wise-percentage/: Cargo.toml
country-wise-percentage/src/: main.rs
data/: 2024_loksabha_election_data_total.json  party_percentage_votes_sorted_desc_country.json  percentage_votes_state_wise.json  state_wise_votes.json  vote_splitting_lost.json  vote_splitting_won.json
data/2024_assembly/: constituency_data_haryana.json  constituency_data_jammu_kashmir.json  constituency_data_jharkhand.json  constituency_data_maharashtra.json  constituency_data_odisha.json  notes.md  seats_haryana.json  seats_jammu_kasmir.json  seats_odisha.json  test_data.json
data/2025_assembly/: constituency_all_data_delhi_2025.json  constituency_data_delhi_2025.json
data/voter_turnout_data/: evm_voter_turnout.json  voter_turnout.json
data_polled_evm_turnout/raw_polled_turnout/: phase1-5.html  phase6.html  (+1 more)
evm-turnout/: Cargo.toml
evm-turnout-matching/: Cargo.toml
join-evm-phase-data/: Cargo.toml
join-evm-phase-data/src/: main.rs
polled-turnout-parsing/: Cargo.toml
state-wise-votes/: Cargo.toml
test_data/: state_votes.json  test_data.json  vote_splitting.json  voter_turnout.json
tranform-evm-turout-data/: Cargo.toml
vote-percentage/: Cargo.toml
vote-splitting/: Cargo.toml
vote-splitting-lost/: Cargo.toml
voter-turnout/: Cargo.toml
(+57 files in other folders)
