[workspace]
members = [ "assembly_code/party-wise-percentage-votes", "assembly_code/party-wise-votes", "evm-turnout", "evm-turnout-matching", "join-evm-phase-data", "polled-turnout-parsing", "state-wise-votes"
, "tranform-evm-turout-data", "vote-percentage", "vote-splitting", "vote-splitting-lost", "voter-turnout"]

resolver = "2"

[workspace.dependencies]
polars = { version = "0.40.0", features = ["lazy", "csv", "json"] }
serde = "1.0.203"
serde_json = "1.0.117"
quick-xml = "0.32.0"
csv = "1.3.0"
fuzzy-matcher = "0.3.7"
levenshtein_automata = "0.2.1"
