[package]
name = "join-evm-phase-data"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
csv = { workspace = true }
fuzzy-matcher = {workspace = true}
levenshtein_automata = {workspace = true}

